# AnonymousMedQuickTune

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  requirements.txt
cluster_scripts/: analyze_fidelity_correlation.sh  analyze_generalization.sh  baseline_run.sh  create_multi_dataset_portfolio.sh  desmoid_test.sh  desmoid_test_best_config.sh  desmoid_train_neps.sh  evaluate_and_validate.sh  evaluate_neps_2d.sh  evaluate_neps_3d.sh  neps_run.sh  noa_run_neps_3d.sh  plot_graphs_medQT.sh  plot_performance_over_time.sh  plot_performance_over_time_multi.sh  plot_performance_over_time_multi_extend.sh  preprocess_brain_tumor.sh  preprocess_dataset.sh  quicktune_run.sh  run_baseline_3d.sh  run_neps_2d.sh  run_neps_3d.sh  run_quicktune_3d.sh  summarize_test_results.sh  test_best_config.sh  train_neps.sh  train_neps_2d.sh  train_neps_3d.sh
configs/: baseline_defaults.yaml  experimental_setting.yaml  hydra_output.yaml  main_experiment_config.yaml
configs/experiments/: desmoid_config.yaml  main_experiment_config.yaml
configs/pipeline_spaces/: autonorm_2d.yaml  autonorm_3d.yaml  autonorm_3d_multifidelity.yaml  autonorm_without_user_priors.yaml  baseline.yaml  densenet.yaml  densenet_natalia.yaml  efficientnet.py  efficientnet.yaml  full.yaml  full_nas.yaml  full_search_space.yaml  pipeline_space_developer_mode.yaml  pipeline_space_with_user_priors.yaml  pipeline_space_without_user_priors.yaml  resnet.yaml  swinunetr.yaml  training.yaml  vit.yaml
datasets/: labels.csv
experiments/Portfolio/: config.csv  cost.csv  curve.csv  meta.csv
reports/: NePS_checkpoint_handling.md  evaluation_protocol_and_data_normalization.md  evaluation_protocol_noa.md
reports/thesis/: setup.tex  thesis_main.loa  thesis_main.tex
reports/thesis/chapters/: 0_2-abstract.tex
shell_scripts/: delete_test_experiments.sh  download_datasets.sh  download_mini_datasets.sh  format.sh  pylint.sh
src/: __init__.py  data.py  evaluate_neps.py  evaluate_neps_config.py  evaluate_neps_new.py  evaluate_quicktune.py  evaluate_trained_config.py  index.html  preprocess_dataset.py  run_neps.py  run_quicktune.py  test.py  test_best_config.py  train.py  train_neps.py  util_functions.py
src/analysis/: analyze_most_expensive_configs.py  confusion_matrix.py  create_portfolio.py  create_portfolio_cluster.py  create_portfolio_cluster_mix.py  create_portfolio_cluster_new.py  evaluate_surrogate_model.py  extract_medmnist_image.py  extract_worc_image.py  fidelity_correlation.py  generalization_analysis.py  neps_quicktune_output_adapter.py  plot_cluster_results.py  plot_results_over_time.py  plot_results_over_time_new.py  plot_results_over_time_norm-baseline.py  summarize_evaluation_results.py
src/classification_2d/: models_2d.py  objective_function_2d.py  preprocess_brain_tumor.py  preprocess_brain_tumor_data_2d.py  preprocess_data_2d.py  preprocess_worc_labels.py
src/classification_3d/: densenet.py  models_3d.py  objective_function_3d.py  preprocess_data_3d.py  preprocess_data_3d_nnunet.py
src/classification_3d/preprocessing/: check_results.py  crop_pad.py  preprocess.py  utils.py
src/classification_3d/utils/: data_transform.py  dataset_cleaning.py  (+5 more)
src/old_scripts/: evaluate_neps.py  evaluate_neps_new.py
src/utils/: common_utils.py  ema_utils.py  evaluation_utils.py  experiment_status_logger.py  ftpfn copy.py  ftpfn.py  logging_utils.py  model_lifecycle_utils.py  neps_conditional_patch.py  portfolio_preprocessing.py  quicktune_utils.py
src_web/: web_app.py
src_web/static/: index.html
src_web/templates/: quickstart.html
utils/: delete_test_experiments.sh  preprocess_data.py
(+11 files in other folders)
