[tool.poetry]
name = "medquicktune"
version = "0.1.0"
description = "This project is dedicated to training multiple models on diverse medical datasets, exploring relevant configuration spaces, and integrating multifidelity optimization techniques. It features functionalities such as saving learning curves in CSV format along with their corresponding configuration IDs. The goal is to advance hyperparameter optimization and model tuning workflows in the medical domain."
authors = ["diane-wagner <wagnerd@informatik.uni-freiburg.de>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=2.0,<2.3"
hydra-core = "^1.3.2"
neural-pipeline-search = { git = "https://github.com/automl/neps.git", tag = "v0.14.0" }
ifbo = { git = "https://github.com/automl/ifbo.git" }
nibabel = ">=5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
# quicktunetool = { git = "https://github.com/automl/quicktunetool.git" }  # Will be installed manually due to numpy conflict
monai = "^1.5.0"
simpleitk = "^2.5.2"
scikit-image = "^0.24.0"
flask = "^3.1.2"
gunicorn = "^23.0.0"
einops = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
