[project]
name = "medquicktune"
version = "0.1.0"
description = "Portfolio-based Meta-learning for Efficient HPO in 3D Oncological Imaging"

authors = [
    {name = "Diane Wagner"},
    {name = "Natalia Oviedo Acosta"}
]

license = {text = "MIT"}

readme = "README.md"

requires-python = ">=3.11,<3.14"

dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",

    "numpy>=2.0",
    "pandas",
    "scipy",
    "scikit-learn==1.5.0",
    "scikit-image==0.24.0",

    "matplotlib",
    "seaborn",
    "tqdm",

    "monai==1.5.2",
    "nibabel==5.4.2",
    "simpleitk==2.5.3",

    "hydra-core==1.3.2",
    "omegaconf==2.3.0",

    "ConfigSpace==1.2.2",
    "botorch==0.12.0",
    "gpytorch==1.13",

    "einops==0.8.2",
    "timm==1.0.26",

    "tensorboard",

    "submitit==1.5.4",

    # quicktunetool = { git = "https://github.com/automl/quicktunetool.git" }  # Will be installed manually due to numpy conflict

    "neural-pipeline-search @ git+https://github.com/automl/neps.git@v0.14.0", 
    "ifBO @ git+https://github.com/automl/ifbo.git@8ddcef0ed1ca88f2992108d39876e926aa58b0f2"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"